--- a/src/src-autom/unit2.lfm
+++ b/src/src-autom/unit2.lfm
@@ -1,14 +1,14 @@
 object form2: Tform2
-  Left = 730
+  Left = 941
   Height = 297
-  Top = 187
+  Top = 228
   Width = 486
   Caption = 'Configuration'
   ClientHeight = 297
   ClientWidth = 486
   OnCreate = FormCreate
   OnShow = FormShow
-  LCLVersion = '1.6.2.0'
+  LCLVersion = '1.8.0.4'
   object CheckBox1: TCheckBox
     Left = 16
     Height = 19
@@ -334,7 +334,7 @@ object form2: Tform2
   end
   object serial: TSdpoSerial
     Active = False
-    BaudRate = br_57600
+    BaudRate = br__9600
     AltBaudRate = 0
     DataBits = db8bits
     Parity = pNone
